--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,63 +6,41 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-
-    <ImageView
-        android:id="@+id/harry_potter"
-        android:layout_width="109dp"
-        android:layout_height="190dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="44dp"
-        android:onClick="DetectFace"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/harry_potter" />
-
-
-    <ImageView
-        android:id="@+id/angry_image"
-        android:layout_width="109dp"
-        android:layout_height="190dp"
-        android:layout_marginTop="44dp"
-        android:onClick="LoadGrayImage"
-        app:layout_constraintEnd_toStartOf="@+id/happy_image"
-        app:layout_constraintStart_toEndOf="@+id/harry_potter"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/angry_image" />
-
-    <ImageView
-        android:id="@+id/happy_image"
-        android:layout_width="109dp"
-        android:layout_height="190dp"
-        android:layout_marginTop="44dp"
-        android:onClick="LoadGrayImage"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.947"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/happy_image" />
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="228dp"
-        android:layout_height="311dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginBottom="156dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/angry_image" />
-
     <TextView
         android:id="@+id/textView"
         android:layout_width="283dp"
         android:layout_height="50dp"
+        android:layout_marginBottom="4dp"
         android:gravity="center"
+        android:shadowColor="@color/black"
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2"
-        app:layout_constraintVertical_bias="0.339" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintVertical_bias="0.414" />
+
+    <Button
+        android:id="@+id/captureFrame"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Capture"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintVertical_bias="0.441" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="271dp"
+        android:layout_height="287dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="140dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
