--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,72 +7,91 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/chosenCamera"
         android:layout_width="283dp"
         android:layout_height="50dp"
-        android:layout_marginBottom="4dp"
+        android:layout_marginTop="43dp"
+        android:layout_marginBottom="264dp"
         android:gravity="center"
         android:shadowColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.614" />
+        app:layout_constraintTop_toBottomOf="@+id/frontButton" />
 
     <Button
         android:id="@+id/captureFrame"
         android:layout_width="184dp"
         android:layout_height="59dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="48dp"
         android:text="Open Camera"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="359dp"
-        android:layout_height="420dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"
+    <Button
+        android:id="@+id/frontButton"
+        android:layout_width="168dp"
+        android:layout_height="68dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="44dp"
+        android:onClick="selectCamera"
+        android:text="Front Camera"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/selectCameraText" />
+
+    <Button
+        android:id="@+id/backButton"
+        android:layout_width="168dp"
+        android:layout_height="68dp"
+        android:layout_marginTop="44dp"
+        android:layout_marginEnd="28dp"
+        android:onClick="selectCamera"
+        android:text="Back Camera"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/selectCameraText" />
+
+    <TextView
+        android:id="@+id/welcomeText"
+        android:layout_width="match_parent"
+        android:layout_height="79dp"
+        android:layout_marginTop="80dp"
+        android:gravity="center"
+        android:text="Welcome to the Emotion Recognition App!"
+        android:textSize="18dp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/selectCameraText"
+        android:layout_width="313dp"
+        android:layout_height="83dp"
+        android:layout_marginTop="180dp"
+        android:gravity="center"
+        android:text="Please begin by choosing the camera that you want to use."
+        android:textSize="18dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="291dp"
-        android:layout_height="67dp"
-        android:layout_marginTop="12dp"
+        android:id="@+id/continueText"
+        android:layout_width="315dp"
+        android:layout_height="64dp"
         android:gravity="center"
-        android:text="Will you be using the front or back camera?"
+        android:text="You can continue by pressing the button below!"
+        android:textSize="18dp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/captureFrame"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
-
-    <Button
-        android:id="@+id/frontButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="92dp"
-        android:layout_marginTop="12dp"
-        android:text="Front"
-        android:onClick="selectCamera"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
-
-    <Button
-        android:id="@+id/backButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="92dp"
-        android:onClick="selectCamera"
-        android:text="Back"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/chosenCamera"
+        app:layout_constraintVertical_bias="0.577" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
