Allow user to go back to MainActivity (home page) from ResultActivity

--- a/app/src/main/res/layout/result_activity.xml
+++ b/app/src/main/res/layout/result_activity.xml
@@ -33,6 +33,7 @@
         android:layout_width="213dp"
         android:layout_height="50dp"
         android:text="Return to Main Page"
+        android:onClick="returnToHome"
         app:layout_constraintBottom_toTopOf="@+id/resultImage"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
