--- a/app/src/main/res/layout/camerax_activity.xml
+++ b/app/src/main/res/layout/camerax_activity.xml
@@ -10,24 +10,42 @@
         android:layout_height="600dp"
         android:layout_width="match_parent"
         tools:ignore="MissingConstraints">
+
         <androidx.camera.view.PreviewView
             android:id="@+id/previewView"
-            android:layout_height="match_parent"
-            android:layout_width="match_parent"/>
+            android:layout_width="0dp"
+            android:layout_height="0dp"></androidx.camera.view.PreviewView>
     </FrameLayout>
 
+    <ImageView
+        android:id="@+id/resultImage"
+        android:layout_width="match_parent"
+        android:layout_height="600dp"
+        app:layout_constraintTop_toTopOf="@+id/container" />
 
     <Button
         android:id="@+id/returnButton"
         android:layout_width="213dp"
         android:layout_height="50dp"
-        android:layout_marginBottom="36dp"
+        android:layout_marginBottom="15dp"
         android:onClick="returnToHome"
         android:text="Return to Main Page"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/container"
-        app:layout_constraintVertical_bias="0.866" />
+        app:layout_constraintVertical_bias="1.0" />
 
+    <TextView
+        android:id="@+id/cameraXText"
+        android:layout_width="288dp"
+        android:layout_height="34dp"
+        android:gravity="center"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/returnButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/container"
+        app:layout_constraintVertical_bias="0.606" />
 </androidx.constraintlayout.widget.ConstraintLayout>
