--- a/app/src/main/res/layout/camerax_activity.xml
+++ b/app/src/main/res/layout/camerax_activity.xml
@@ -7,21 +7,19 @@
 
     <FrameLayout
         android:id="@+id/container"
-        android:layout_height="600dp"
         android:layout_width="match_parent"
-        tools:ignore="MissingConstraints">
-
+        android:layout_height="592dp"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="-1dp">
         <androidx.camera.view.PreviewView
             android:id="@+id/previewView"
             android:layout_width="0dp"
             android:layout_height="0dp"></androidx.camera.view.PreviewView>
+        <ImageView
+            android:id="@+id/resultImage"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
     </FrameLayout>
-
-    <ImageView
-        android:id="@+id/resultImage"
-        android:layout_width="match_parent"
-        android:layout_height="600dp"
-        app:layout_constraintTop_toTopOf="@+id/container" />
 
     <Button
         android:id="@+id/returnButton"
@@ -47,5 +45,6 @@
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/container"
-        app:layout_constraintVertical_bias="0.606" />
+        app:layout_constraintVertical_bias="0.609" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
