--- a/app/src/main/res/layout/camerax_activity.xml
+++ b/app/src/main/res/layout/camerax_activity.xml
@@ -9,19 +9,18 @@
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="592dp"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="-1dp">
+        tools:ignore="MissingConstraints">
         <androidx.camera.view.PreviewView
             android:id="@+id/previewView"
-            android:layout_width="match_parent"
-            android:layout_height="600dp">
+            android:layout_width="0dp"
+            android:layout_height="0dp">
         </androidx.camera.view.PreviewView>
     </FrameLayout>
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="match_parent"
+        android:layout_height="600dp"
         tools:ignore="MissingConstraints" />
 
     <Button
